# kga-fastapi-integration-template

./: .dockerignore  .env.example  .gitattributes  .gitignore  CLAUDE.local.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.json
.claude/rules/: fastapi-conventions.md  python-pep8.md
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml
app/: config.py  main.py
app/example/: auth.py  service.py  token_store.py
app/models/: __init__.py  common.py  example.py
app/routers/: deps.py  example.py
reference/: README.md
tests/: conftest.py  test_auth_contract.py  test_health_and_boot.py  test_routers.py  test_token_store.py
